--- a/笔记/反射.md
+++ b/笔记/反射.md
@@ -55,12 +55,23 @@ func main() {
 	// 结果：
 	// *reflect.rtype
 	// uint8
+    
+    type t1 = uint8
+	var v1 t1
+	v1 = 2
+	ReflectType(v1)
+	// *reflect.rtype
+	// uint8
+
+    
 }
 ```
 
 #### type.Name和type.Kind
 
 ​        在反射中关于类型还划分为两种：<font color=FF0000>`类型（Type）`和`种类（Kind）`</font>。因为在Go语言中我们可以使用type关键字构造很多自定义类型，而`种类（Kind）`就是指底层的类型，但在反射中，当需要区分指针、结构体等大品种的类型时，就会用到`种类（Kind）`。 举个例子，我们定义了两个指针类型和两个结构体类型，通过反射查看它们的类型和种类。
+
+​		`reflect.TypeOf()`默认输出type.name
 
 ```go
 package main
@@ -165,6 +176,274 @@ const (
 |       Bool() bool        |                     将值以 bool 类型返回                     |
 |     Bytes() []bytes      |               将值以字节数组 []bytes 类型返回                |
 |     String() string      |                     将值以字符串类型返回                     |
+
+#### 通过反射获取值
+
+```go
+package main
+
+import (
+	"fmt"
+	"reflect"
+)
+
+func ReflectValue(x interface{}) {
+	v := reflect.ValueOf(x)
+	k := v.Kind()
+
+	fmt.Printf("type v: %T\n", v)  // reflect.Value
+	fmt.Printf("value v: %v\n", v) // 3.14
+	fmt.Printf("type k: %T\n", k)  // reflect.Kind
+	fmt.Printf("valus k: %v\n", k) // float32
+
+	switch k {
+	case reflect.Int64:
+		// v.Int()从反射中获取整型的原始值，然后通过int64()强制类型转换
+		fmt.Printf("type is int64, value is %d\n", int64(v.Int()))
+	case reflect.Float32:
+		// v.Float()从反射中获取浮点型的原始值，然后通过float32()强制类型转换
+		fmt.Printf("type is float32, value is %f\n", float32(v.Float()))
+	case reflect.Float64:
+		// v.Float()从反射中获取浮点型的原始值，然后通过float64()强制类型转换
+		fmt.Printf("type is float64, value is %f\n", float64(v.Float()))
+	}
+}
+
+func main() {
+	var a float32 = 3.14
+	var b int64 = 100
+	ReflectValue(a) // type is float32, value is 3.140000
+	ReflectValue(b) // type is int64, value is 100
+
+	// 将int类型的原始值转换为reflect.value类型
+	c := reflect.ValueOf(10)
+	fmt.Printf("type c :%T\n", c) // reflect.Value
+
+}
+```
+
+
+
+#### 通过反射设置变量的值
+
+想要在函数中通过反射修改变量的值，需要注意函数参数传递的是值拷贝，必须传递变量地址才能修改变量值。
+
+<font color=FF0000>而反射中使用专有的`Elem()`方法来获取指针对应的值。 </font>
+
+```go
+package main
+
+import (
+	"fmt"
+	"reflect"
+)
+
+func reflectSetValue1(x interface{}) {
+	v := reflect.ValueOf(x)
+	if v.Kind() == reflect.Int64 {
+		v.SetInt(200) // 修改的是副本，reflect包回引发panic
+	}
+}
+func reflectSetValue2(x interface{}) {
+	v := reflect.ValueOf(x)
+	// 反射种使用 Elem() 方法获取指针对应的值
+	if v.Elem().Kind() == reflect.Int64 {
+		v.Elem().SetInt(200)
+	}
+}
+func main() {
+	var a int64 = 100
+	reflectSetValue2(a) // 值类型报错 panic: reflect: call of reflect.Value.Elem on int64 Value
+	reflectSetValue2(&a)
+	fmt.Println(a)
+}
+```
+
+
+
+#### isNil() 和 isValid()
+
+* isNil()
+
+  `func (v Value) IsNil() bool`
+
+  `IsNil()`报告v持有的值是否为nil。v持有的值的分类必须是通道、函数、接口、映射、指针、切片之一；否则`IsNil`函数会导致`panic`。 
+
+* isValid()
+
+  `func (v Value) IsValid() bool`
+
+  `IsValid()`返回v是否持有一个值。如果v是Value零值会返回假，此时v除了`IsValid、String、Kind`之外的方法都会导致`panic`。
+
+<font color=FF0000> `IsNil()`常被用于判断指针是否为空；`IsValid()`常被用于判定返回值是否有效。 </font>
+
+```go
+func main() {
+	// *int类型空指针
+	var a *int
+	fmt.Println("var a *int IsNil:", reflect.ValueOf(a).IsNil())    // true
+    var a1 *string
+	fmt.Println("var a * int isNill:", reflect.ValueOf(a1).IsNil()) // true
+	// nil值
+	fmt.Println("nil IsValid:", reflect.ValueOf(nil).IsValid())     // false
+	// 实例化一个匿名结构体
+	b := struct{}{}
+	// 尝试从结构体中查找"abc"字段
+	fmt.Println("不存在结构体成员:",reflect.ValueOf(b).FieldByName("abc").IsValid())//false
+	// 尝试从结构体中查找"abc"方法
+    fmt.Println("不存在结构体方法:",reflect.ValueOf(b).MethodByName("abc").IsValid())//false
+	// map
+	c := map[string]int{}
+	// 尝试从map中查找一个不存在的键  MapIndex(key reflect.Value)s
+	fmt.Println("map中不存在的键：", reflect.ValueOf(c).MapIndex(reflect.ValueOf("娜扎")).IsValid())  // false
+}
+```
+
+
+
+## 结构体反射
+
+任意值通过`reflect.TypeOf()`获得反射对象信息后，如果它的类型是结构体，可以通过反射值对象（`reflect.Type`）的`NumField()`和`Field()`方法获得结构体成员的详细信息。
+
+`reflect.Type`中与获取结构体成员相关的的方法如下表所示。
+
+|                            方法                             |                             说明                             |
+| :---------------------------------------------------------: | :----------------------------------------------------------: |
+|                  Field(i int) StructField                   |          根据索引，返回索引对应的结构体字段的信息。          |
+|                       NumField() int                        |                   返回结构体成员字段数量。                   |
+|        FieldByName(name string) (StructField, bool)         |       根据给定字符串返回字符串对应的结构体字段的信息。       |
+|            FieldByIndex(index []int) StructField            | 多层成员访问时，根据 []int 提供的每个结构体的字段索引，返回字段的信息。 |
+| FieldByNameFunc(match func(string) bool) (StructField,bool) |              根据传入的匹配函数匹配需要的字段。              |
+|                       NumMethod() int                       |                返回该类型的方法集中方法的数目                |
+|                     Method(int) Method                      |                返回该类型方法集中的第i个方法                 |
+|             MethodByName(string)(Method, bool)              |              根据方法名返回该类型方法集中的方法              |
+
+
+
+### StructField类型
+
+`StructField`类型用来描述结构体中的一个字段的信息。
+
+`StructField`的定义如下：
+
+```go
+type StructField struct {
+    // Name是字段的名字。PkgPath是非导出字段的包路径，对导出字段该字段为""。
+    // 参见http://golang.org/ref/spec#Uniqueness_of_identifiers
+    Name    string
+    PkgPath string
+    Type      Type      // 字段的类型
+    Tag       StructTag // 字段的标签
+    Offset    uintptr   // 字段在结构体中的字节偏移量
+    Index     []int     // 用于Type.FieldByIndex时的索引切片
+    Anonymous bool      // 是否匿名字段
+}
+```
+
+
+
+### 结构体反射示例
+
+当我们使用反射得到一个结构体数据之后可以通过索引依次获取其字段信息，也可以通过字段名去获取指定的字段信息。
+
+```go
+package main
+
+import (
+	"fmt"
+	"reflect"
+)
+
+type student struct {
+	Name string `json:"name"`
+	Age  int    `json:"age"`
+}
+
+func main() {
+	stu1 := student{
+		Name: "zhang3",
+		Age:  18,
+	}
+
+	t := reflect.TypeOf(stu1)
+	fmt.Println(t.Name(), t.Kind()) // student struct
+
+	// 通过for循环遍历结构体的所有字段信息
+	for i := 0; i < t.NumField(); i++ {
+		field := t.Field(i)
+		fmt.Printf("name:%s index:%d type:%v json_tag:%v\n", field.Name, field.Index, field.Type, field.Tag.Get("json"))
+		/*
+			name:Name  index:[0]  type:string  json_tag:name
+			name:Age   index:[1]  type:int     json_tag:age
+		*/
+	}
+
+	// 通过字段名获取指定结构体字段信息
+	if ageFiled, ok := t.FieldByName("Age"); ok {
+		fmt.Printf("name:%s index:%d type:%v json_tag:%v\n", ageFiled.Name, ageFiled.Index, ageFiled.Type, ageFiled.Tag.Get("json"))
+		/*
+			name:Age index:[1] type:int json_tag:age
+		*/
+	}
+}
+```
+
+ 接下来编写一个函数`printMethod(s interface{})`来遍历打印s包含的方法。 
+
+```go
+package main
+
+import (
+	"fmt"
+	"reflect"
+)
+
+type student struct {
+	Name string `json:"name"`
+	Age  int    `json:"age"`
+}
+
+// 给student添加两个方法 Study 和 Sleep （首字母大写）
+func (s student) Study() string {
+	msg := "xxxx study"
+	fmt.Println(msg)
+	return msg
+}
+
+func (s student) Sleep() string {
+	msg := "xxx sleep"
+	fmt.Println(msg)
+	return msg
+}
+
+func pringMethod(s interface{}) {
+	t := reflect.TypeOf(s)
+	v := reflect.ValueOf(s)
+	fmt.Println(t)             // main.student
+	fmt.Println(v)             // {zhang3 16}
+	fmt.Println(t.NumMethod()) // 2
+	fmt.Println(v.NumMethod()) // 2
+	for i := 0; i < t.NumMethod(); i++ {
+		methodType := v.Method(i).Type()
+		fmt.Printf("method name %s\n", t.Method(i).Name) // method name Sleep  // method name Study
+		fmt.Printf("method: %s\n", methodType)           // method: func() string // method: func() string
+
+		// 通过反射调用方法传递的参数必须是 []reflect.Value 类型
+		var args = []reflect.Value{}
+		v.Method(i).Call(args)
+	}
+}
+
+func main() {
+	var s1 = student{
+		Name: "zhang3",
+		Age:  16,
+	}
+	pringMethod(s1)
+}
+```
+
+
 
 
 
