--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -57,6 +57,62 @@
 | LastIndexByte(s string, c byte) int                        | 返回字符串s中字符c最后一次出现的位置                         |
 | lastIndexFunc(s string, f func(rune) bool, truth bool) int | 返回字符串s中满足函数f(r)==true字符最后一次出现的位置        |
 
+```go
+// ContainsAny
+fmt.Println(strings.ContainsAny("team","i"))        // false
+fmt.Println(strings.ContainsAny("failure","u & i")) // true
+fmt.Println(strings.ContainsAny("foo",""))          // false
+fmt.Println(strings.ContainsAny("",""))             // false
+
+// ContainsRune
+fmt.Println(strings.ContainsRune("我是中国",'我')) // true 注意第二个参数，用的是字符
+
+// Conut            str2为空时，结果是前一字符串数+1
+fmt.Println(strings.Count("cheese","e")) // 3
+fmt.Println(strings.Count("five",""))    // before & after each rune result: 5,源码中有实现
+
+// EqualFold
+fmt.Println(strings.EqualFold("Go","gO")) //大小写忽略
+
+// Fields    字符串空格切割为切片
+fmt.Printf("Fields are: %q",strings.Fields(" foo bar baz ")) //["foo" "bar" "baz"] 返回列表
+
+// HasPrefix
+fmt.Println(strings.HasPrefix("NLT_abc","NLT")) // true
+
+// HasSuffix
+fmt.Println(strings.HasSuffix("NLT_abc","abc")) // true
+
+// Index
+fmt.Println(strings.Index("NLT_abc","abc")) // 4 返回第一个匹配字符的位置
+fmt.Println(strings.Index("NLT_abc","aaa")) // -1
+fmt.Println(strings.Index("我是中国人","中")) // 6 bytes
+
+// IndexAny
+fmt.Println(strings.IndexAny("我是中国人","中")) // 在存在返回 6
+fmt.Println(strings.IndexAny("我是中国人","和")) // 在存在返回 -1
+
+// IndexRune
+fmt.Println(strings.IndexRune("我是中国人",'中')) // 6  任然返回bytes位置
+fmt.Println(strings.IndexRune("NLT_abc",'b'))   // 5
+fmt.Println(strings.IndexRune("NLT_abc",'s'))   // -1
+
+// Join
+s := []string{"foo","bar","baz"}
+fmt.Println(strings.Join(s,",")) // foo,bar,baz
+
+// LastIndex
+fmt.Println(strings.LastIndex("go gopher","go")) // 3
+
+// LastIndexAny
+fmt.Println(strings.LastIndexAny("go gopher","go"))    // 4
+fmt.Println(strings.LastIndexAny("go gopherabc","go")) // 4
+fmt.Println(strings.LastIndexAny("我是中国人","中"))      // 6
+fmt.Println(strings.LastIndexAny("我是中国人呀","中"))    // 6
+
+// 
+```
+
 
 
 ### 分割字符串
