--- a/笔记/并发.md
+++ b/笔记/并发.md
@@ -248,37 +248,782 @@ fmt.Println(ch3)    // 0x11436040
 
 ```go
 // 创建一个通道
-ch1 := make(chan int)
+ch1 := make(chan int,10)
 
 // 发送
-
+ch1 <- 10
 
 // 接收
-
+v1 := <- ch1  // 从ch1中接收值并赋值给变量v1
+ch3 := make(chan int,10)
+ch3 <- 1
+<- ch3        // 从ch3中接收值，忽略结果
 
 // 关闭
+close(ch1)
+
+```
+
+​        关于关闭通道需要注意的事情是，只有在通知接收方goroutine所有的数据都发送完毕的时候才需要关闭通道。通道是可以被垃圾回收机制回收的，它和关闭文件是不一样的，在结束操作之后关闭文件是必须要做的，但关闭通道不是必须的。 
+
+关闭后的通道有以下特点：
+
+1. 对一个关闭的通道再发送值就会导致panic。
+2. 对一个关闭的通道进行接收会一直获取值直到通道为空。
+3. 对一个关闭的并且没有值的通道执行接收操作会得到对应类型的零值。
+4. 关闭一个已经关闭的通道会导致panic。
+
+#### 遇到问题
+
+**fatal error: all goroutines are asleep - deadlock!**
+
+当chan容量不够放了，会出现上述报错，或者chan没有值可取了
 
 
 
+### 无缓冲通道
+
+ 无缓冲的通道又称为阻塞的通道。我们来看一下下面的代码： 
+
+```go
+func main() {
+	ch := make(chan int)
+	ch <- 10
+	fmt.Println("发送成功")
+}
+```
+
+ 上面这段代码能够通过编译，但是执行的时候会出现以下错误： 
+
+```go
+fatal error: all goroutines are asleep - deadlock!
+
+goroutine 1 [chan send]:
+main.main()
+        .../src/github.com/Q1mi/studygo/day06/channel02/main.go:8 +0x54
+```
+
+为什么会出现`deadlock`错误呢？
+
+因为我们使用`ch := make(chan int)`创建的是无缓冲的通道，<font color=FF0000>无缓冲的通道只有在有人接收值的时候才能发送值。</font>就像你住的小区没有快递柜和代收点，快递员给你打电话必须要把这个物品送到你的手中，简单来说就是无缓冲的通道必须有接收才能发送。
+
+上面的代码会阻塞在`ch <- 10`这一行代码形成死锁，那如何解决这个问题呢？
+
+<font color=FF0000>一种方法是启用一个`goroutine`去接收值,同一程序内只要又goroutine取值就不会panic</font>，例如：
+
+```go
+func recv(c chan int) {
+	ret := <-c
+	fmt.Println("接收成功", ret)
+}
+func main() {
+	ch := make(chan int)
+	go recv(ch) // 启用goroutine从通道接收值
+	ch <- 10
+	fmt.Println("发送成功")
+}
+```
+
+无缓冲通道上的发送操作会阻塞，直到另一个`goroutine`在该通道上执行接收操作，这时值才能发送成功，两个`goroutine`将继续执行。相反，如果接收操作先执行，接收方的goroutine将阻塞，直到另一个`goroutine`在该通道上发送一个值。
+
+使用无缓冲通道进行通信将导致发送和接收的`goroutine`同步化。因此，无缓冲通道也被称为`同步通道`。
+
+### 有缓冲的通道
+
+ 解决上面问题的方法还有一种就是使用有缓冲区的通道。我们可以在使用make函数初始化通道的时候为其指定通道的容量，例如： 
+
+```go
+func main() {
+	ch := make(chan int, 1) // 创建一个容量为1的有缓冲区通道
+	ch <- 10
+	fmt.Println("发送成功")
+}
+```
+
+只要通道的容量大于零，那么该通道就是有缓冲的通道，通道的容量表示通道中能存放元素的数量。就像你小区的快递柜只有那么个多格子，格子满了就装不下了，就阻塞了，等到别人取走一个快递员就能往里面放一个。
+
+我们可以使用内置的`len`函数获取通道内元素的数量，使用`cap`函数获取通道的容量，虽然我们很少会这么做。
+
+### for range从通道循环取值
+
+```go
+for i := range ch2 { // range通道0值返回false
+	fmt.Println(i)
+}
+```
+
+当向通道中发送完数据时，我们可以通过`close`函数来关闭通道。
+
+当通道被关闭时，再往该通道发送值会引发`panic`，从该通道取值的操作会先取完通道中的值，再然后取到的值一直都是对应类型的零值。那如何判断一个通道是否被关闭了呢？
+
+
+
+我们来看下面这个例子：
+
+```go
+package main
+
+import "fmt"
+
+func main() {
+	ch1 := make(chan int)
+	ch2 := make(chan int)
+
+	// 开启goroutine 将0-100发送到ch1
+	go func(){
+		for i:=0;i<10;i++{
+			ch1 <- i
+		}
+		close(ch1)
+	}()
+
+	// 开启goroutine，从ch1中接收值，并将该值的平方发送到ch2中
+	go func() {
+		for {
+			i,ok := <- ch1  // ok --> [true false]  通道不关闭直接pinc
+			if !ok {
+				break
+			}
+
+			ch2 <- i*i
+		}
+		close(ch2)
+	}()
+
+	// 再主goroutine中从ch2中接收值打印
+	for i := range ch2 { // 通道不关闭直接pinc
+		fmt.Println(i)
+	}
+}
+```
+
+从上面的例子中我们看到有两种方式在接收值的时候判断该通道是否被关闭，不过我们通常使用的是`for range`的方式。<font color=FF0000>使用`for range`遍历通道，当通道被关闭的时候就会退出`for range`。 </font>
+
+```go
+package main
+
+import "fmt"
+
+func main() {
+	ch1 := make(chan int,3)
+	ch1 <- 1
+	ch1 <- 1
+	ch1 <- 1
+	fmt.Println(len(ch1))
+	close(ch1)  // 不在这里关闭通道，直接panic
+	for i := range ch1{
+		fmt.Println(i)
+	}
+}
+
+/*
+fatal error: all goroutines are asleep - deadlock!
+
+goroutine 1 [chan receive]:
+main.main()
+	C:/Users/Administrator/go/src/awesomeProject/mytest2/main.go:12 +0x159
+*/
+```
+
+```go
+package main
+
+import "fmt"
+
+func main() {
+	ch1 := make(chan int,10)
+
+	ch1 <- 10
+	ch1 <- 10
+	// 关闭通道
+	close(ch1)
+	for {
+		data ,ok := <-ch1
+		if !ok {
+			fmt.Println("通道没有值")
+			return
+		}
+		fmt.Println(data)
+	}
+}
 ```
 
 
 
+### 单向通道
+
+有的时候我们会将通道作为参数在多个任务函数间传递，很多时候我们在不同的任务函数中使用通道都会对其进行限制，比如限制通道在函数中只能发送或只能接收。
+
+其中，
+
+- `chan<- int`是一个只写单向通道（只能对其写入int类型值），可以对其执行发送操作但是不能执行接收操作；
+- `<-chan int`是一个只读单向通道（只能从其读取int类型值），可以对其执行接收操作但是不能执行发送操作。
+
+在函数传参及任何赋值操作中可以将双向通道转换为单向通道，但反过来是不可以的。
+
+Go语言中提供了**单向通道**来处理这种情况。例如，我们把上面的例子改造如下：
+
+```go
+package main
+
+import "fmt"
+
+// counter 向单向通道输入值
+func counter(in chan<- int){
+	for i:=0 ;i<100;i++{
+		in <- i
+	}
+	close(in)
+}
+
+// squarer 在单向通道取值放到另一单向接收通道
+func squarer(in chan<- int,out <-chan int){
+	for i := range out{
+		in <- i * i
+	}
+	close(in)
+}
+
+// printer 取出并打印通道值
+func printer(out <-chan int) {
+	for i := range out{
+		fmt.Println(i)
+	}
+}
+
+func main() {
+	ch1 := make(chan int)
+	ch2 := make(chan int)
+	go counter(ch1)
+	go squarer(ch2,ch1)
+	printer(ch2)
+}
+```
 
 
 
+### 通道总结
+
+`channel`常见的异常总结，如下图：
+
+![1611041906702](C:\gogit\笔记\并发.assets\1611041906702.png)
+
+关闭已经关闭的`channel`也会引发`panic`。
+
+## worker pool(goroutine池)
+
+golang/ants  开源协程池，有待研究
+
+ 在工作中我们通常会使用可以指定启动的goroutine数量–`worker pool`模式，控制`goroutine`的数量，防止`goroutine`泄漏和暴涨。 
+
+*  一个简易的`work pool`示例代码如下： 
+
+```go
+package main
+
+import (
+	"fmt"
+	"time"
+)
+
+func worker(id int,jobs <-chan int,result chan<- int){
+	for j := range jobs{
+		fmt.Printf("worker:%d start job:%d\n",id,j)
+		time.Sleep(time.Second)
+		fmt.Printf("worker:%d end job:%d\n",id,j)
+		result <- j * 2
+	}
+}
+
+func main() {
+	jobs := make(chan int,100)
+	result := make(chan int,100)
+
+	// 开启3个goroutine
+	for w := 1;w<=3;w++{
+		go worker(w,jobs,result)
+	}
+	// 开启5个任务
+	for j := 1;j<=5;j++{
+		jobs <- j
+	}
+	close(jobs)
+	// 输出结果
+	for a := 1;a <= 5;a++{
+		<- result
+	}
+}
+```
+
+* 通过channel队列做一个线程池
+
+```go
+package main
+
+import (
+	"fmt"
+	"sync"
+)
+/*
+1. 将要执行的操作放到channel队列里
+2. 将要执行的操作封装成函数，开count个goroutine消费channel
+3. 每个goroutine去channel拿出要操作的任务并执行
+*/
+
+func Execute(c <-chan interface{},id int){
+    defer wg.Done()
+	for i := range c{
+		fmt.Printf("线程 %v, 值%v\n",id,i)
+	}
+}
+
+func QueuePool(count int,f func(c <-chan interface{},id int),c <-chan interface{}){
+	for i:=1 ;i <= count;i++{
+		go f(c,i)
+	}
+}
+
+// 定义全局的channel
+// var c2 = make(chan interface{},1000)
+var c2 = make(chan interface{})
+
+var wg sync.WaitGroup
+
+func main() {
+    // 制造一个场景
+	var l1 []int
+	for i:=1;i<=200;i++{
+		l1 = append(l1, i)
+	}
+	fmt.Println(l1) // [1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20]...
+
+    // 定义希望开启线程池的数量
+	var count int =3
+
+    f1 := func() {
+		// 要执行的值放到chanel
+		for _,v := range l1{
+			c2 <- v
+		}
+		// 关闭channel
+		close(c2)
+	}
+    
+    // goroutine放入channel避免无缓存通道painc
+	go f1()
+    
+    wg.Add(1)
+    // 通过线程池执行
+	QueuePool(count,Execute,c2)
+
+	wg.Wait()
+}
+```
 
 
 
+## select 多路复用
+
+在某些场景下我们需要同时从多个通道接收数据。通道在接收数据时，如果没有数据可以接收将会发生阻塞。你也许会写出如下代码使用遍历的方式来实现： 
+
+```go
+for{
+    // 尝试从ch1接收值
+    data, ok := <-ch1
+    // 尝试从ch2接收值
+    data, ok := <-ch2
+    …
+}
+```
+
+这种方式虽然可以实现从多个通道接收值的需求，但是运行性能会差很多。为了应对这种场景，Go内置了`select`关键字，可以同时响应多个通道的操作。 
+
+`select`的使用类似于switch语句，它有一系列case分支和一个默认的分支。select会随机挑选一个可通信的case执行，如果所有case都没有数据到达，则执行default，如果没有default语句，select就会阻塞，知道case接收数据。
+
+```go
+select{
+    case <-ch1:
+        ...
+    case data := <-ch2:
+        ...
+    case ch3<-data:
+        ...
+    default:
+        默认操作
+}
+```
+
+举个小例子来演示下`select`的使用：
+
+```go
+func main() {
+	ch := make(chan int, 1)
+	for i := 0; i < 10; i++ {
+		select {
+		case x := <-ch:
+			fmt.Println(x)
+		case ch <- i:
+		}
+	}
+}
+```
+
+使用`select`语句能提高代码的可读性。
+
+- 可处理一个或多个channel的发送/接收操作。
+- 如果多个`case`同时满足，`select`会随机选择一个。
+- 对于没有`case`的`select{}`会一直等待，可用于阻塞main函数。
+
+### 随机挑选select
+
+两个case随机取值，如果case条件达不到会取到default
+
+```go
+package main
+
+import (
+	"fmt"
+	"time"
+)
+
+func main() {
+	ch1 := make(chan int)
+	ch2 := make(chan int)
+
+	go func() {
+		ch1 <- 100
+	}()
+
+	go func() {
+		ch2 <- 200
+	}()
+
+	// 如果不等待goroutine两个匿名函数执行，则case取不到值，会走default
+	time.Sleep(time.Second)
+
+	select {
+	case data := <-ch1:
+		fmt.Println("ch1读取数据: ",data)
+	case data := <-ch2:
+		fmt.Println("ch2读取数据: ",data)
+	default:
+		fmt.Println("default...")
+	}
+}
+```
+
+### select的阻塞机制
+
+```go
+package main
+
+import (
+	"fmt"
+	"time"
+)
+
+func main() {
+	ch1 := make(chan int)
+	ch2 := make(chan int)
+
+	go func() {
+		time.Sleep(10*time.Second)
+		data := <-ch1
+		fmt.Println("ch1: ",data)
+	}()
+
+	go func() {
+		time.Sleep(2*time.Second)
+		data := <- ch2
+		fmt.Println("ch2: ",data)
+	}()
+
+	select {
+	case ch1 <- 100: // 阻塞
+		close(ch1)
+		fmt.Println("ch1写数据...")
+	case ch2 <- 200: // 阻塞
+		close(ch2)
+		fmt.Println("ch2写数据...")
+	case <- time.After(3*time.Millisecond): // 阻塞,超时时间大于以上通道执行时间，才能正常执行上边case
+		fmt.Println("执行延时通道...")
+	//default:  // 有time无法实现定时器超时，因为阻塞直接就走default了
+	//	fmt.Println("default...")
+	}
+	time.Sleep(4*time.Second)
+	fmt.Println("main over")
+}
+```
+
+我们使用`channel`来接收协程里的业务返回值。
+
+`select`语句阻塞等待最先返回数据的`channel`，当先接收到`time.After`的通道数据时，`select`则会停止阻塞并执行该`case`的代码。此时就已经实现了对业务代码的超时处理。
 
 
 
+## 并发安全和锁
 
+有时候在Go代码中可能会存在多个`goroutine`同时操作一个资源（临界区），这种情况会发生`竞态问题`（数据竞态）。类比现实生活中的例子有十字路口被各个方向的的汽车竞争；还有火车上的卫生间被车厢里的人竞争。 
 
+```go
+package main
 
+import (
+	"fmt"
+	"sync"
+)
 
+var x int64
+var wg sync.WaitGroup
 
+func add() {
+	defer wg.Done()
+	for i := 0; i < 5000; i++ {
+		x = x + 1
+	}
+}
 
+func main() {
+	wg.Add(2)
+	go add()
+	go add()
+	wg.Wait()
+	fmt.Println(x)  // 结果非5000，数据竞争导致
+}
+```
+
+上面的代码中我们开启了两个`goroutine`去累加变量x的值，这两个`goroutine`在访问和修改`x`变量的时候就会存在数据竞争，导致最后的结果与期待的不符。 
+
+### 互斥锁
+
+互斥锁是一种常用的控制共享资源访问的方法，它能够保证同时只有一个`goroutine`可以访问共享资源。Go语言中使用`sync`包的`Mutex`类型来实现互斥锁。 使用互斥锁来修复上面代码的问题： 
+
+```go
+package main
+
+import (
+	"fmt"
+	"sync"
+)
+
+var x int64
+var wg sync.WaitGroup
+var lock sync.Mutex  // 互斥锁
+func add() {
+	defer wg.Done()
+	defer lock.Unlock()  // 解锁
+	lock.Lock() // 加锁
+	for i := 0; i < 5000; i++ {
+		x = x + 1
+	}
+}
+
+func main() {
+	wg.Add(2)
+	go add()
+	go add()
+	wg.Wait()
+	fmt.Println(x)  // 10000 结果为两个add 执行之和
+}
+```
+
+使用互斥锁能够保证同一时间有且只有一个`goroutine`进入临界区，其他的`goroutine`则在等待锁；当互斥锁释放后，等待的`goroutine`才可以获取锁进入临界区，多个`goroutine`同时等待一个锁时，唤醒的策略是随机的。 
+
+### 读写互斥锁
+
+互斥锁是完全互斥的，但是有很多实际的场景下是读多写少的，当我们并发的去读取一个资源不涉及资源修改的时候是没有必要加锁的，这种场景下使用读写锁是更好的一种选择。读写锁在Go语言中使用`sync`包中的`RWMutex`类型。
+
+读写锁分为两种：读锁和写锁。当一个goroutine获取读锁之后，其他的`goroutine`如果是获取读锁会继续获得锁，如果是获取写锁就会等待；当一个`goroutine`获取写锁之后，其他的`goroutine`无论是获取读锁还是写锁都会等待。
+
+读写锁示例：
+
+```go
+package main
+
+import (
+	"fmt"
+	"sync"
+	"time"
+)
+
+var(
+	x int64
+	wg sync.WaitGroup
+	rwlock sync.RWMutex
+)
+
+func write(x int64){
+	rwlock.Lock()   // 加写锁
+	x = x+1
+	time.Sleep(10*time.Millisecond) // 假设读操作耗时10毫秒
+	rwlock.Unlock()   // 解锁
+	wg.Done()
+}
+
+func read(){
+	rwlock.Lock() // 加读锁
+	time.Sleep(time.Millisecond)  // 假设读操作耗时1毫秒
+	rwlock.Unlock()   // 解锁
+	wg.Done()
+}
+
+func main() {
+	x = 1
+	start := time.Now()
+	for i:=0;i<10;i++{
+		wg.Add(1)
+		go write(x)
+	}
+
+	for i := 0;i<1000;i++{
+		wg.Add(1)
+		go read()
+	}
+
+	wg.Wait()
+	end := time.Now()
+	fmt.Println(end.Sub(start))
+}
+```
+
+### sync.WaitGroup
+
+在代码中生硬的使用`time.Sleep`肯定是不合适的，Go语言中可以使用`sync.WaitGroup`来实现并发任务的同步。 `sync.WaitGroup`有以下几个方法： 
+
+| 方法名                          | 功能                |
+| :------------------------------ | :------------------ |
+| (wg * WaitGroup) Add(delta int) | 计数器+delta        |
+| (wg *WaitGroup) Done()          | 计数器-1            |
+| (wg *WaitGroup) Wait()          | 阻塞直到计数器变为0 |
+
+`sync.WaitGroup`内部维护着一个计数器，计数器的值可以增加和减少。例如当我们启动了N 个并发任务时，就将计数器值增加N。每个任务完成时通过调用Done()方法将计数器减1。通过调用Wait()来等待并发任务执行完，当计数器值为0时，表示所有并发任务已经完成。 
+
+```go
+var wg sync.WaitGroup
+
+func hello() {
+	defer wg.Done()
+	fmt.Println("Hello Goroutine!")
+}
+func main() {
+	wg.Add(1)
+	go hello() // 启动另外一个goroutine去执行hello函数
+	fmt.Println("main goroutine done!")
+	wg.Wait()
+}
+```
+
+ 需要注意`sync.WaitGroup`是一个结构体，传递的时候要传递指针。 
+
+### sync.Once
+
+说在前面的话：这是一个进阶知识点。
+
+在编程的很多场景下我们需要确保某些操作在高并发的场景下只执行一次，例如只加载一次配置文件、只关闭一次通道等。
+
+Go语言中的`sync`包中提供了一个针对只执行一次场景的解决方案–`sync.Once`。
+
+`sync.Once`只有一个`Do`方法，其签名如下：
+
+```go
+func (o *Once) Do(f func()) {}
+```
+
+<font color=FF0000>备注：如果要执行的函数`f`需要传递参数就需要搭配闭包来使用。</font>
+
+#### 加载配置文件示例
+
+延迟一个开销很大的初始化操作到真正用到它的时候再执行是一个很好的实践。因为预先初始化一个变量（比如在init函数中完成初始化）会增加程序的启动耗时，而且有可能实际执行过程中这个变量没有用上，那么这个初始化操作就不是必须要做的。我们来看一个例子： 
+
+```go
+var icons map[string]image.Image
+
+var loadIconsOnce sync.Once
+
+func loadIcons() {
+	icons = map[string]image.Image{
+		"left":  loadIcon("left.png"),
+		"up":    loadIcon("up.png"),
+		"right": loadIcon("right.png"),
+		"down":  loadIcon("down.png"),
+	}
+}
+
+// loadIcon 是并发安全的
+func loadIcon(name string) image.Image {
+	loadIconsOnce.Do(loadIcons)
+	return icons[name]
+}
+```
+
+#### 并发安全的单例模式
+
+ 下面是借助`sync.Once`实现的并发安全的单例模式： 
+
+```go
+package singleton
+
+import (
+    "sync"
+)
+
+type singleton struct {}
+
+var instance *singleton
+var once sync.Once
+
+func GetInstance() *singleton {
+    once.Do(func() {
+        instance = &singleton{}
+    })
+    return instance
+}
+```
+
+### sync.Map
+
+ Go语言中内置的map不是并发安全的。
+
+ 需要为map加锁来保证并发的安全性了，Go语言的`sync`包中提供了一个开箱即用的并发安全版map–`sync.Map`。开箱即用表示不用像内置的map一样使用make函数初始化就能直接使用。同时`sync.Map`内置了诸如`Store`、`Load`、`LoadOrStore`、`Delete`、`Range`等操作方法。 
+
+```go
+var m = sync.Map{}
+
+func main() {
+	wg := sync.WaitGroup{}
+	for i := 0; i < 20; i++ {
+		wg.Add(1)
+		go func(n int) {
+			key := strconv.Itoa(n)
+			m.Store(key, n)
+			value, _ := m.Load(key)
+			fmt.Printf("k=:%v,v:=%v\n", key, value)
+			wg.Done()
+		}(i)
+	}
+	wg.Wait()
+}
+```
+
+## 原子操作
+
+代码中的加锁操作因为涉及内核态的上下文切换会比较耗时、代价比较高。针对基本数据类型我们还可以使用原子操作来保证并发安全，因为原子操作是Go语言提供的方法它在用户态就可以完成，因此性能比加锁操作更好。Go语言中原子操作由内置的标准库`sync/atomic`提供。 
+
+### atomic包
+
+| 方法                                                         | 解释           |
+| :----------------------------------------------------------- | :------------- |
+| func LoadInt32(addr *int32) (val int32) func LoadInt64(addr *int64) (val int64) func LoadUint32(addr *uint32) (val uint32) func LoadUint64(addr *uint64) (val uint64) func LoadUintptr(addr *uintptr) (val uintptr) func LoadPointer(addr *unsafe.Pointer) (val unsafe.Pointer) | 读取操作       |
+| func StoreInt32(addr *int32, val int32) func StoreInt64(addr *int64, val int64) func StoreUint32(addr *uint32, val uint32) func StoreUint64(addr *uint64, val uint64) func StoreUintptr(addr *uintptr, val uintptr) func StorePointer(addr *unsafe.Pointer, val unsafe.Pointer) | 写入操作       |
+| func AddInt32(addr *int32, delta int32) (new int32) func AddInt64(addr *int64, delta int64) (new int64) func AddUint32(addr *uint32, delta uint32) (new uint32) func AddUint64(addr *uint64, delta uint64) (new uint64) func AddUintptr(addr *uintptr, delta uintptr) (new uintptr) | 修改操作       |
+| func SwapInt32(addr *int32, new int32) (old int32) func SwapInt64(addr *int64, new int64) (old int64) func SwapUint32(addr *uint32, new uint32) (old uint32) func SwapUint64(addr *uint64, new uint64) (old uint64) func SwapUintptr(addr *uintptr, new uintptr) (old uintptr) func SwapPointer(addr *unsafe.Pointer, new unsafe.Pointer) (old unsafe.Pointer) | 交换操作       |
+| func CompareAndSwapInt32(addr *int32, old, new int32) (swapped bool) func CompareAndSwapInt64(addr *int64, old, new int64) (swapped bool) func CompareAndSwapUint32(addr *uint32, old, new uint32) (swapped bool) func CompareAndSwapUint64(addr *uint64, old, new uint64) (swapped bool) func CompareAndSwapUintptr(addr *uintptr, old, new uintptr) (swapped bool) func CompareAndSwapPointer(addr *unsafe.Pointer, old, new unsafe.Pointer) (swapped bool) | 比较并交换操作 |
+
+```go
+
+```
+
+`atomic`包提供了底层的原子级内存操作，对于同步算法的实现很有用。这些函数必须谨慎地保证正确使用。除了某些特殊的底层应用，使用通道或者sync包的函数/类型实现同步更好。 
 
 
 
