--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -1,5 +1,7 @@
 # 字符串
 
+## 字符串遍历
+
 * 字符串遍历 `byte`,`rune`
 
    rune类型用来表示utf8字符，一个rune字符由一个或多个byte组成。 
@@ -57,93 +59,44 @@
 | LastIndexByte(s string, c byte) int                        | 返回字符串s中字符c最后一次出现的位置                         |
 | lastIndexFunc(s string, f func(rune) bool, truth bool) int | 返回字符串s中满足函数f(r)==true字符最后一次出现的位置        |
 
-```go
-// ContainsAny
-fmt.Println(strings.ContainsAny("team","i"))        // false
-fmt.Println(strings.ContainsAny("failure","u & i")) // true
-fmt.Println(strings.ContainsAny("foo",""))          // false
-fmt.Println(strings.ContainsAny("",""))             // false
-
-// ContainsRune
-fmt.Println(strings.ContainsRune("我是中国",'我')) // true 注意第二个参数，用的是字符
-
-// Conut            str2为空时，结果是前一字符串数+1
-fmt.Println(strings.Count("cheese","e")) // 3
-fmt.Println(strings.Count("five",""))    // before & after each rune result: 5,源码中有实现
-
-// EqualFold
-fmt.Println(strings.EqualFold("Go","gO")) //大小写忽略
-
-// Fields    字符串空格切割为切片
-fmt.Printf("Fields are: %q",strings.Fields(" foo bar baz ")) //["foo" "bar" "baz"] 返回列表
-
-// HasPrefix
-fmt.Println(strings.HasPrefix("NLT_abc","NLT")) // true
-
-// HasSuffix
-fmt.Println(strings.HasSuffix("NLT_abc","abc")) // true
-
-// Index
-fmt.Println(strings.Index("NLT_abc","abc")) // 4 返回第一个匹配字符的位置
-fmt.Println(strings.Index("NLT_abc","aaa")) // -1
-fmt.Println(strings.Index("我是中国人","中")) // 6 bytes
-
-// IndexAny
-fmt.Println(strings.IndexAny("我是中国人","中")) // 在存在返回 6
-fmt.Println(strings.IndexAny("我是中国人","和")) // 在存在返回 -1
-
-// IndexRune
-fmt.Println(strings.IndexRune("我是中国人",'中')) // 6  任然返回bytes位置
-fmt.Println(strings.IndexRune("NLT_abc",'b'))   // 5
-fmt.Println(strings.IndexRune("NLT_abc",'s'))   // -1
-
-// Join
-s := []string{"foo","bar","baz"}
-fmt.Println(strings.Join(s,",")) // foo,bar,baz
-
-// LastIndex
-fmt.Println(strings.LastIndex("go gopher","go")) // 3
-
-// LastIndexAny
-fmt.Println(strings.LastIndexAny("go gopher","go"))    // 4
-fmt.Println(strings.LastIndexAny("go gopherabc","go")) // 4
-fmt.Println(strings.LastIndexAny("我是中国人","中"))      // 6
-fmt.Println(strings.LastIndexAny("我是中国人呀","中"))    // 6
-
-// 
-```
 
 
+### 修建字符串
 
-### 分割字符串
-
-
-
-
-
-
-
-### 大小写转换
-
-
-
-
-
-
-
-### 修剪字符串
-
-
-
-
+| 方法                                     | 功能                            |
+| ---------------------------------------- | ------------------------------- |
+| func Trim(s, cutset string) string       | 将s首尾包含cutset的字符去掉     |
+| func TrimLeft(s, cutset string) string   | 将左边包含cutset的字符去掉      |
+| func TrimRight(s, cutset string) string  | 将右边包含cutset的字符去掉      |
+| func TrimPrefix(s, prefix string) string | 将字符串s中前缀字符串prefix去掉 |
+| func TrimSuffix(s, suffix string) string | 将字符串s中后缀字符串prefix去掉 |
 
 
 
 ### 比较字符串
 
+| 方法                          | 功能                        |
+| ----------------------------- | --------------------------- |
+| func Compare(a, b string) int | 安字典顺序比较a,b字符串大小 |
 
-
-
+```go
+func Compare(a, b string) int {
+	// NOTE(rsc): This function does NOT call the runtime cmpstring function,
+	// because we do not want to provide any performance justification for
+	// using strings.Compare. Basically no one should use strings.Compare.
+	// As the comment above says, it is here only for symmetry with package bytes.
+	// If performance is important, the compiler should be changed to recognize
+	// the pattern so that all code doing three-way comparisons, not just code
+	// using strings.Compare, can benefit.
+	if a == b {
+		return 0
+	}
+	if a < b {
+		return -1
+	}
+	return +1
+}
+```
 
 ## 常用方法
 
@@ -157,7 +110,116 @@ fmt.Println(strings.Contains("",""))              //true 这里要特别注意
 fmt.Println(strings.Contains("我是中国人","我"))    //true
 ```
 
-* 
+```go
+// ContainsAny 字符串包含
+fmt.Println(strings.ContainsAny("team","i"))        // false
+fmt.Println(strings.ContainsAny("failure","u & i")) // true
+fmt.Println(strings.ContainsAny("foo",""))          // false
+fmt.Println(strings.ContainsAny("",""))             // false
+
+// ContainsRune 字符包含
+fmt.Println(strings.ContainsRune("我是中国",'我')) // true 注意第二个参数，用的是字符
+
+// Conut            str2为空时，结果是前一字符串数+1
+fmt.Println(strings.Count("cheese","e")) // 3
+fmt.Println(strings.Count("five",""))    // before & after each rune result: 5,源码中有实现
+
+// EqualFold  忽略大小写比较
+fmt.Println(strings.EqualFold("Go","gO")) // true
+
+// 
+
+// Fields    空格切割为切片
+fmt.Printf("Fields are: %q",strings.Fields(" foo bar baz ")) //["foo" "bar" "baz"] 返回列表
+
+// Split 切割
+fmt.Printf("%q\n",strings.Split("a,b,c",","))    // ["a" "b" "c"]
+fmt.Printf("%q\n",strings.Split("a man a plan a canal panama","a "))  // ["" "man " "plan " "canal panama"]
+fmt.Printf("%q\n",strings.Split(" xyz ",""))  // [" " "x" "y" "z" " "]
+fmt.Printf("%q\n",strings.Split("","Bernardo O'Higgins"))  // [""]
+
+// HasPrefix 以什么开头
+fmt.Println(strings.HasPrefix("NLT_abc","NLT")) // true
+
+// HasSuffix 以什么结尾
+fmt.Println(strings.HasSuffix("NLT_abc","abc")) // true
+
+// Index 返回字符位置
+fmt.Println(strings.Index("NLT_abc","abc")) // 4 返回第一个匹配字符的位置
+fmt.Println(strings.Index("NLT_abc","aaa")) // -1
+fmt.Println(strings.Index("我是中国人","中")) // 6 bytes
+
+// IndexAny 
+fmt.Println(strings.IndexAny("我是中国人","中")) // 在存在返回 6
+fmt.Println(strings.IndexAny("我是中国人","和")) // 在存在返回 -1
+
+// IndexRune
+fmt.Println(strings.IndexRune("我是中国人",'中')) // 6  任然返回bytes位置
+fmt.Println(strings.IndexRune("NLT_abc",'b'))   // 5
+fmt.Println(strings.IndexRune("NLT_abc",'s'))   // -1
+
+// Join 字符串连接
+s := []string{"foo","bar","baz"}
+fmt.Println(strings.Join(s,",")) // foo,bar,baz
+
+// LastIndex 最后一次出现位置
+fmt.Println(strings.LastIndex("go gopher","go")) // 3
+
+// LastIndexAny
+fmt.Println(strings.LastIndexAny("go gopher","go"))    // 4
+fmt.Println(strings.LastIndexAny("go gopherabc","go")) // 4
+fmt.Println(strings.LastIndexAny("我是中国人","中"))      // 6
+fmt.Println(strings.LastIndexAny("我是中国人呀","中"))    // 6
+
+// Repeat 复制
+fmt.Println(strings.Repeat("na",3)) // nanana
+
+// Replace 替换
+fmt.Println(strings.Replace("oink oink oink","k","ky",2))     // oinky oinky oink
+fmt.Println(strings.Replace("oink oink oink","oink","moo",-1)) // moo moo moo 全部替换
+fmt.Println(strings.Replace("ABAACEDF","A","a",2)) // aBaACEDF
+
+// SplitAfter
+fmt.Printf("%q\n",strings.SplitAfter("/home/m_ta/src","/")) //["/" "home/" "m_ta/" "src"]
+
+// SplitAfterN
+fmt.Printf("%q\n",strings.SplitAfterN("/home/m_ta/src","/",2))  //["/" "home/m_ta/src"]
+fmt.Printf("%q\n",strings.SplitAfterN("#home#m_ta#src","#",-1)) //["#" "home#" "m_ta#" "src"]
+
+// SplitN
+fmt.Println(" SplitN 函数的用法")
+fmt.Printf("%q\n",strings.SplitN("/home/m_ta/src","/",3)) // ["" "home" "m_ta/src"]
+fmt.Printf("%q\n",strings.SplitN("/home/m_ta/src","/",2)) // ["" "home/m_ta/src"]
+fmt.Printf("%q\n",strings.SplitN("home,m_ta,src",",",2))   //["home" "m_ta,src"]
+fmt.Printf("%q\n",strings.SplitN("#home#m_ta#src","#",-1)) //["/" "home/" "m_ta/" "src"]
+
+// Title  将字符串中的首字母大写
+fmt.Println(strings.Title("her royal highness")) // Her Royal Highness
+fmt.Println(strings.Title("lll"))                // Lll
+
+// ToLower 转小写
+fmt.Println(strings.ToLower("Gopher")) //gopher
+
+// ToUpper 转大写
+fmt.Println(strings.ToUpper("Gopher")) //GOPHER
+
+// Trim 去掉首尾包含的字符
+fmt.Printf("[%q]",strings.Trim(" !!! Achtung !!! ","! ")) // "Achtung" 去掉首尾包含!的字符
+
+// TrimSpace 去除空格
+fmt.Println(strings.TrimSpace(" asdfad   "))  // asdfad
+
+// TrimLeft 去掉左边包含的字符
+fmt.Printf("[%q]",strings.TrimLeft(" !!! Achtung !!! ","! ")) // "Achtung !!! "
+
+// TrimRight 去掉右包含
+fmt.Printf("[%q]",strings.TrimRight(" !!! Achtung !!! ","! ")) // " !!! Achtung"
+
+// Compare 比较字符串
+fmt.Printf("%v\n",strings.Compare("abc","acb"))  // -1
+fmt.Printf("%v\n",strings.Compare("abc","abc"))  // 0
+fmt.Println("abc"=="acb")  // false
+```
 
 
 
