--- a/笔记/接口.md
+++ b/笔记/接口.md
@@ -387,8 +387,29 @@ b := dog{}  // 实例化一个dog
      	fmt.Println(dict)
      }
      ```
-
-
+  
+  3.  切片空接口
+  
+     ```go
+     // 定义空接口
+     var s1 = make([]interface{},3)
+     var s2 = make([]string,3)
+     // 切片s1的值对应s2元素指针类型 [0x1148ba00 0x1148ba08 0x1148ba10]
+     for i,_ := range s1{
+         s1[i] = &s2[i]
+     }
+     fmt.Println(s1)
+     fmt.Println(s2)
+     // 空接口指针元素赋值
+     s := reflect.ValueOf(s1[0])
+     s.Elem().SetString("sss")
+     
+     fmt.Printf("-    - - -- %T,   %v\n",s,s)
+     fmt.Println(s2)
+     fmt.Println(s1)
+     ```
+  
+     
 
 ## 接口断言
 
