--- a/笔记/网络编程.md
+++ b/笔记/网络编程.md
@@ -455,9 +455,108 @@ func main() {
 }
 ```
 
-### 带参数的GET请求
 
 
+#### http.NewRequest()
+
+```go
+package main
+
+import (
+	"fmt"
+	"io/ioutil"
+	"net/http"
+)
+
+func TestHeepNewRequest(){
+	// 1 创建一个客户端
+	client := http.Client{}
+	// 2 创建一个请求，可以是get也可以是post
+	request, err := http.NewRequest("GET","https://www.toutiao.com/search/suggest/initial_page",nil)
+	checkErr(err)
+	// 3 客户端发送请求
+	cookName := &http.Cookie{Name: "username",Value: "xxxxx"}
+	// 添加cookie
+	request.AddCookie(cookName)
+	response , err := client.Do(request)
+	checkErr(err)
+	// 设置请求头
+	request.Header.Set("Accept-Lanauage","zh-vn")
+	defer response.Body.Close()
+	// 查看请求头数据
+	fmt.Println(request.Header)
+	fmt.Println(response.StatusCode)
+	// 查看body
+	body , err := ioutil.ReadAll(response.Body)
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	fmt.Println(string(body))
+}
+
+func checkErr(err error)  {
+	if ins,ok := recover().(error);ok{
+		fmt.Println("程序异常",ins.Error())
+	}
+	if err != nil{
+		fmt.Println(err)
+	}
+}
+
+func main() {
+	TestHeepNewRequest()
+}
+```
+
+#### client.get()
+
+```go
+package main
+
+import (
+	"fmt"
+	"io/ioutil"
+	"net/http"
+)
+
+func TestClientGet(){
+	// 创建一个客户端
+	client := http.Client{}
+	// 通过client去请求
+	response, err := client.Get("https://www.toutiao.com/search/suggest/initial_page")
+	checkErr(err)
+	// header
+	fmt.Println(response.Header)
+	if response.StatusCode != 200{
+		fmt.Println("返回非200")
+	}
+	// 查看body
+	body , err := ioutil.ReadAll(response.Body)
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	fmt.Println(string(body))
+}
+
+func checkErr(err error)  {
+	if ins,ok := recover().(error);ok{
+		fmt.Println("程序异常",ins.Error())
+	}
+	if err != nil{
+		fmt.Println(err)
+	}
+}
+
+func main() {
+	TestClientGet()
+}
+```
+
+ 
+
+#### 带参数的GET请求
 
 ```go
 package main
@@ -504,6 +603,8 @@ func getHandler(w http.ResponseWriter, r *http.Request) {
 	w.Write([]byte(answer))
 }
 ```
+
+
 
 ### Post请求示例
 
@@ -625,6 +726,12 @@ log.Fatal(http.ListenAndServe(":8080", nil))
 
 ### 默认的Server示例
 
+P214
+
+**http.FileServer()**是FileSystem接口，只提供静态访问，可使用http.Dir()来指定服务断文件所在的路劲。日过该路劲中有index.html文件则会优先显示html，否则列出文件目录列表
+
+**http.HandleFunc**的作用是注册网络访问的路由。因为他采用的是默认的路由分发任务方式，所以称之为默认的多路由分发服务
+
 使用Go语言中的`net/http`包来编写一个简单的接收HTTP请求的Server端示例，`net/http`包是对net包的进一步封装，专门用来处理HTTP协议的数据。具体的代码如下： 
 
 ```GO
@@ -638,9 +745,13 @@ import (
 func resstr(w http.ResponseWriter,r *http.Request){
 	fmt.Fprintln(w,"<h1>hello</h1>")
 }
+func upload (w http.ResponseWriter,r *http.Request){
+    fmt.Fprintln(w,"<h1>upload </h1>")
+}
 
 func main() {
 	http.HandleFunc("/",resstr)
+    http.HandleFunc("/upload",resstr)
 	err := http.ListenAndServe("0.0.0.0:9000",nil)
 	if err != nil{
 		fmt.Println(err)
@@ -663,6 +774,78 @@ s := &http.Server{
 }
 log.Fatal(s.ListenAndServe())
 ```
+
+
+
+### 获取客户端请求数据
+
+#### GET传递参数
+
+常用方法：
+
+* `r.ParseForm()`，返回error，判断是否解析传参时出错
+* `r.Form()`，返回`url.Values`，它是`map[string][]string`类型。一般情况下使用`r.FromValus(key)`方法更简洁方便
+* `r.FormValues(key)`方法可以根据客户端传参的key获取对应的值
+* 其中r表示`*http.Request`类型，w表示`http.ResponseWrite`类型。
+
+```go
+func loginActHandler(w http.ResponseWriter,r *http.Request)  {
+	r.ParseForm()
+	if r.Method == "GET" && r.ParseForm() == nil{
+		username := r.FormValue("username")
+		password := r.FormValue("password")
+		if len(username) < 4 || len(username) > 10 {
+			w.Write([]byte("用户名不符合规范"))
+		}
+		if len(pwd) < 6 || len(pwd) > 16{
+			w.Write([]byte("密码不符合规范"))
+		}
+		// 页面跳转
+		http.Redirect(w, r,"list",http.StatusFound)
+		return
+	}
+}
+```
+
+
+
+#### POST传递参数
+
+post传参分为以下两种情况
+
+* 普通的post表单请求： `content-Type=application/x-www-form-urlencoded`
+* 有文件上传的表单：`content-Type=multipart/form-data`
+
+content-Type=application/x-www-form-urlencoded 处理方式：
+
+```go
+func postAction(w http.ResponseWriter,r *http.Request){
+	r.ParseForm()
+	if r.Method == "POST" && r.ParseForm() == nil {
+		username := r.PostFormValue("username")
+		pwd := r.PostFormValue("pwd")
+		pwd = helper.HASH(pwd,"md5",false)
+		logininfo := username + ":" + pwd
+		// 将信息保存到文件
+		helper.AppendToRegInfo(USER_FILE,logininfo+"\n")
+		// 将信息保存到cookie
+		helper.SetCookie(w,r,COOKIE_NAME,logininfo)
+		// 页面跳转
+		http.Redirect(w,r,"list",302)
+		return
+	}
+}
+```
+
+content-Type=multipart/form-data处理方式：
+
+P219《go语言开发实战》
+
+## GO模板
+
+P221《go语言开发实战》
+
+
 
 
 
